# Aisyst-livekit-agents

./: README.md
livekit/: .env.example  .gitignore  Eleven_Labs_Actual_Payload.JSON  L'Addition_ElevenLabs.drawio  Livekit_Voice_Agent.py  Nvidia_PersonaPlex_Research.md  README.md  Stripe_Payment_Architecture.drawio  Transformer_Architecture.md  docker-compose.yml  livekit_main_agent.py  pyproject.toml  requirements.txt  supabase_edge_function(modified).ts  supabase_edge_function(original).ts
livekit/Docs/: LAddition_POS_Integration_Guide.md  LiveKit_Warm_Transfer_Implementation_Guide.md  Nvidia_PersonaPlex_Research.md  Pricing_Model_Adaptability_Report.md  README.md  Stripe_Payment_Integration_Comparison.md  Stripe_Subscription_Invoicing_Guide.md  TODO.md
livekit/agents/: __init__.py  restaurant_agent.py
livekit/agents/config/: __init__.py  menu_data.py  prompts.py
livekit/agents/models/: __init__.py  menu.py  order.py
livekit/agents/tools/: __init__.py  menu_tools.py  order_tools.py  payment_tools.py
livekit/documentation/: QUICK_START.md  SETUP.md
livekit/monitoring/: __init__.py  alerts.py  health_check.py  logger.py  metrics.py
livekit/openspec/: project.md
livekit/scripts/: test_call.py
livekit/stripe/: __init__.py  models.py  payment_client.py  webhook_handler.py
livekit/stripe_edge_functions/: README.md  create_checkout_session.ts  report_usage.ts  stripe_webhook_handler.ts
livekit/tests/: __init__.py  conftest.py  test_agent.py
livekit/twilio/: __init__.py  sms_client.py  templates.py  webhook_handler.py
